Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(01/12/14) - Improvements - Version 1.9.4.5

[*] Made Theme Options responsive
[*] Update coyright to 2014
[x] Removed old code in header.php

----

(01/07/14) - Improvements - Version 1.9.4.4

[+] Added improved support gallery images
[x] Removed old tags

----

(12/22/13) - Improvements - Version 1.9.4.3

[+] Allow switching minified scripts with SCRIPT_DEBUG
[x] Removed code for Backward Compatibility of WP 3.4
[*] Improved responsive_widget_menu_class as suggested by markoheijnen
[*] Allow Stylesheet version update automatically.
[!] Fix disabling breadcrumbs

----

(12/15/13) - Improvements - Version 1.9.4.2

[+] Made search form accessible
[*] Updated screenshot to 880x660px
[*] Moved breadcrumb check from template to functions.php
[*] Updated responsive.pot
[*] Updated links from themeid.com to cyberchimps.com

----

(12/08/13) - Improvements - Version 1.9.4.1

[+] Added `featured-content` id to front-page.
[*] Updated Welsh, Russian and Greek translations.
[!] Fixed the footer widget with adding fit class to third widget.
[x] Removed duplicated theme options titles.
[x] Removed old mobile menu css.

----

(11/29/13) - Improvements - Version 1.9.4.0

[+] Added front page setting notification to reading settings.
[+] Added support for paragraphs for the front page areas.
[*] Update German Translation.
[!] Fix placeholder + IE8 + The Event Calendar issue.
[*] Improve mobile menu title.

----

(10/28/13) - Improvements - Version 1.9.3.9

[+] Added footer widget area.
[+] Added Id's to home widgets.
[+] Added h3 tags to widgets.
[x] Removed 100% width from input form fields.
[*] Plugin notification is made to be displayed only to admin.
[*] Updated language files.
[!] Fixed if else structure.
[!] Fixed Image map area.
[*] Widgets - Added better descriptions.

----

(10/04/13) - Improvements - Version 1.9.3.8

http://cyberchimps.com/guide/update-1-9-3-8/
