@@ -486,6 +486,27 @@ function responsive_category_rel_removal( $output ) {
 add_filter( 'wp_list_categories', 'responsive_category_rel_removal' );
 add_filter( 'the_category', 'responsive_category_rel_removal' );
 
+
+/**
+ * Breadcrumb Lists
+ * Load the plugin from the plugin that is installed.
+ *
+ */
+function get_responsive_breadcrumb_lists() {
+	$responsive_options = get_option( 'responsive_theme_options' );
+	if ( 1 == $responsive_options['breadcrumb'] && is_search() ) {
+		return;
+	} elseif( function_exists( 'bcn_display' ) ) {
+		bcn_display();
+	} elseif ( function_exists( 'breadcrumb_trail' ) ){
+		breadcrumb_trail();
+	} elseif ( function_exists( 'yoast_breadcrumb' ) ) {
+		yoast_breadcrumb( '<p id="breadcrumbs">','</p>' );
+	} else {
+		responsive_breadcrumb_lists();
+	}
+}
+
 /**
  * Breadcrumb Lists
  * Allows visitors to quickly navigate back to a previous section or the root page.
@@ -493,190 +514,176 @@ add_filter( 'the_category', 'responsive_category_rel_removal' );
  * Adopted from Dimox
  *
  */
-if( !function_exists( 'responsive_breadcrumb_lists' ) ) :
+if( !function_exists( 'responsive_breadcrumb_lists' ) ) {
 
 	function responsive_breadcrumb_lists() {
-		$responsive_options = get_option( 'responsive_theme_options' );
 
-		if ( 0 == $responsive_options['breadcrumb'] && !is_search() ) {
+		/* === OPTIONS === */
+		$text['home']     = __( 'Home', 'responsive' ); // text for the 'Home' link
+		$text['category'] = __( 'Archive for %s', 'responsive' ); // text for a category page
+		$text['search']   = __( 'Search results for: %s', 'responsive' ); // text for a search results page
+		$text['tag']      = __( 'Posts tagged %s', 'responsive' ); // text for a tag page
+		$text['author']   = __( 'View all posts by %s', 'responsive' ); // text for an author page
+		$text['404']      = __( 'Error 404', 'responsive' ); // text for the 404 page
 
-			/* === OPTIONS === */
-			$text['home']     = __( 'Home', 'responsive' ); // text for the 'Home' link
-			$text['category'] = __( 'Archive for %s', 'responsive' ); // text for a category page
-			$text['search']   = __( 'Search results for: %s', 'responsive' ); // text for a search results page
-			$text['tag']      = __( 'Posts tagged %s', 'responsive' ); // text for a tag page
-			$text['author']   = __( 'View all posts by %s', 'responsive' ); // text for an author page
-			$text['404']      = __( 'Error 404', 'responsive' ); // text for the 404 page
+		$show['current'] = 1; // 1 - show current post/page title in breadcrumbs, 0 - don't show
+		$show['home']    = 0; // 1 - show breadcrumbs on the homepage, 0 - don't show
+		$show['search']  = 0; // 1 - show breadcrumbs on the search page, 0 - don't show
 
-			$showCurrent = 1; // 1 - show current post/page title in breadcrumbs, 0 - don't show
-			$showOnHome  = 0; // 1 - show breadcrumbs on the homepage, 0 - don't show
-			$delimiter   = ' <span class="chevron">&#8250;</span> '; // delimiter between crumbs
-			$before      = '<span class="breadcrumb-current">'; // tag before the current crumb
-			$after       = '</span>'; // tag after the current crumb
-			/* === END OF OPTIONS === */
+		$delimiter    = ' <span class="chevron">&#8250;</span> '; // delimiter between crumbs
+		$before       = '<span class="breadcrumb-current">'; // tag before the current crumb
+		$after        = '</span>'; // tag after the current crumb
+		/* === END OF OPTIONS === */
 
-			global $post, $paged, $page;
-			$homeLink   = home_url( '/' );
-			$linkBefore = '<span class="breadcrumb" typeof="v:Breadcrumb">';
-			$linkAfter  = '</span>';
-			$linkAttr   = ' rel="v:url" property="v:title"';
-			$link       = $linkBefore . '<a' . $linkAttr . ' href="%1$s">%2$s</a>' . $linkAfter;
+		$home_link   = home_url( '/' );
+		$before_link = '<span class="breadcrumb" typeof="v:Breadcrumb">';
+		$after_link  = '</span>';
+		$link_att    = ' rel="v:url" property="v:title"';
+		$link        = $before_link . '<a' . $link_att . ' href="%1$s">%2$s</a>' . $after_link;
 
-			if( is_front_page() ) {
+		$post        = get_queried_object();
+		$parent_id   = isset( $post->post_parent ) ? $post->post_parent : '';
 
-				if( $showOnHome == 1 ) {
-					echo '<div class="breadcrumb-list"><a href="' . $homeLink . '">' . $text['home'] . '</a></div>';
+		$html_output = '';
+
+		if( is_front_page() ) {
+			if( 1 == $show['home'] ) {
+				$html_output .= '<div class="breadcrumb-list"><a href="' . $home_link . '">' . $text['home'] . '</a></div>';
+			}
+
+		} else {
+			$html_output .= '<div class="breadcrumb-list" xmlns:v="http://rdf.data-vocabulary.org/#">' . sprintf( $link, $home_link, $text['home'] ) . $delimiter;
+
+			if( is_home() ) {
+				if( 1 == $show['current'] ) {
+					$html_output .= $before . get_the_title( get_option( 'page_for_posts', true ) ) . $after;
 				}
+
+			} elseif( is_category() ) {
+				$this_cat = get_category( get_query_var( 'cat' ), false );
+				if( 0 != $this_cat->parent ) {
+					$cats = get_category_parents( $this_cat->parent, true, $delimiter );
+					$cats = str_replace( '<a', $before_link . '<a' . $link_att, $cats );
+					$cats = str_replace( '</a>', '</a>' . $after_link, $cats );
+					$html_output .= $cats;
+				}
+				$html_output .= $before . sprintf( $text['category'], single_cat_title( '', false ) ) . $after;
+
+			} elseif( is_search() ) {
+				if( 1 == $show['search'] ) {
+					$html_output .= $before . sprintf( $text['search'], get_search_query() ) . $after;
+				}
+
+			} elseif( is_day() ) {
+				$html_output .= sprintf( $link, get_year_link( get_the_time( 'Y' ) ), get_the_time( 'Y' ) ) . $delimiter;
+				$html_output .= sprintf( $link, get_month_link( get_the_time( 'Y' ), get_the_time( 'm' ) ), get_the_time( 'F' ) ) . $delimiter;
+				$html_output .= $before . get_the_time( 'd' ) . $after;
+
+			} elseif( is_month() ) {
+				$html_output .= sprintf( $link, get_year_link( get_the_time( 'Y' ) ), get_the_time( 'Y' ) ) . $delimiter;
+				$html_output .= $before . get_the_time( 'F' ) . $after;
+
+			} elseif( is_year() ) {
+				$html_output .= $before . get_the_time( 'Y' ) . $after;
+
+			} elseif( is_single() && !is_attachment() ) {
+				if( 'post' != get_post_type() ) {
+					$post_type    = get_post_type_object( get_post_type() );
+					$archive_link = get_post_type_archive_link( $post_type->name );
+					$html_output .= sprintf( $link, $archive_link, $post_type->labels->singular_name );
+					if( 1 == $show['current'] ) {
+						$html_output .= $delimiter . $before . get_the_title() . $after;
+					}
+				} else {
+					$cat  = get_the_category();
+					$cat  = $cat[0];
+					$cats = get_category_parents( $cat, true, $delimiter );
+					if( 0 == $show['current'] ) {
+						$cats = preg_replace( "#^(.+)$delimiter$#", "$1", $cats );
+					}
+					$cats = str_replace( '<a', $before_link . '<a' . $link_att, $cats );
+					$cats = str_replace( '</a>', '</a>' . $after_link, $cats );
+					$html_output .= $cats;
+					if( 1 == $show['current'] ) {
+						$html_output .= $before . get_the_title() . $after;
+					}
+				}
+
+			} elseif( !is_single() && !is_page() && !is_404() && 'post' != get_post_type() ) {
+				$post_type = get_post_type_object( get_post_type() );
+				$html_output .= $before . $post_type->labels->singular_name . $after;
+
+			} elseif( is_attachment() ) {
+				$parent = get_post( $parent_id );
+				$cat    = get_the_category( $parent->ID );
+
+				if( isset( $cat[0] ) ) {
+					$cat = $cat[0];
+				}
+
+				if( $cat ) {
+					$cats = get_category_parents( $cat, true, $delimiter );
+					$cats = str_replace( '<a', $before_link . '<a' . $link_att, $cats );
+					$cats = str_replace( '</a>', '</a>' . $after_link, $cats );
+					$html_output .= $cats;
+				}
+
+				$html_output .= sprintf( $link, get_permalink( $parent ), $parent->post_title );
+				if( 1 == $show['current'] ) {
+					$html_output .= $delimiter . $before . get_the_title() . $after;
+				}
+
+			} elseif( is_page() && !$parent_id ) {
+				if( 1 == $show['current'] ) {
+					$html_output .=  $before . get_the_title() . $after;
+				}
+
+			} elseif( is_page() && $parent_id ) {
+				$breadcrumbs = array();
+				while( $parent_id ) {
+					$page_child    = get_page( $parent_id );
+					$breadcrumbs[] = sprintf( $link, get_permalink( $page_child->ID ), get_the_title( $page_child->ID ) );
+					$parent_id     = $page_child->post_parent;
+				}
+				$breadcrumbs = array_reverse( $breadcrumbs );
+				for( $i = 0; $i < count( $breadcrumbs ); $i++ ) {
+					$html_output .= $breadcrumbs[$i];
+					if( $i != count( $breadcrumbs ) - 1 ) {
+						$html_output .= $delimiter;
+					}
+				}
+				if( 1 == $show['current'] ) {
+					$html_output .= $delimiter . $before . get_the_title() . $after;
+				}
+
+			} elseif( is_tag() ) {
+				$html_output .= $before . sprintf( $text['tag'], single_tag_title( '', false ) ) . $after;
+
+			} elseif( is_author() ) {
+				$user_id = get_query_var( 'author' );
+				$userdata = get_the_author_meta( 'display_name', $user_id );
+				$html_output .= $before . sprintf( $text['author'], $userdata ) . $after;
+
+			} elseif( is_404() ) {
+				$html_output .= $before . $text['404'] . $after;
 
 			}
-			else {
 
-				echo '<div class="breadcrumb-list" xmlns:v="http://rdf.data-vocabulary.org/#">' . sprintf( $link, $homeLink, $text['home'] ) . $delimiter;
-
-				if( is_home() ) {
-					if( $showCurrent == 1 ) {
-						echo $before . get_the_title( get_option( 'page_for_posts', true ) ) . $after;
-					}
-
-				}
-				elseif( is_category() ) {
-					$thisCat = get_category( get_query_var( 'cat' ), false );
-					if( $thisCat->parent != 0 ) {
-						$cats = get_category_parents( $thisCat->parent, true, $delimiter );
-						$cats = str_replace( '<a', $linkBefore . '<a' . $linkAttr, $cats );
-						$cats = str_replace( '</a>', '</a>' . $linkAfter, $cats );
-						echo $cats;
-					}
-					echo $before . sprintf( $text['category'], single_cat_title( '', false ) ) . $after;
-
-				}
-				elseif( is_search() ) {
-					echo $before . sprintf( $text['search'], get_search_query() ) . $after;
-
-				}
-				elseif( is_day() ) {
-					echo sprintf( $link, get_year_link( get_the_time( 'Y' ) ), get_the_time( 'Y' ) ) . $delimiter;
-					echo sprintf( $link, get_month_link( get_the_time( 'Y' ), get_the_time( 'm' ) ), get_the_time( 'F' ) ) . $delimiter;
-					echo $before . get_the_time( 'd' ) . $after;
-
-				}
-				elseif( is_month() ) {
-					echo sprintf( $link, get_year_link( get_the_time( 'Y' ) ), get_the_time( 'Y' ) ) . $delimiter;
-					echo $before . get_the_time( 'F' ) . $after;
-
-				}
-				elseif( is_year() ) {
-					echo $before . get_the_time( 'Y' ) . $after;
-
-				}
-				elseif( is_single() && !is_attachment() ) {
-					if( get_post_type() != 'post' ) {
-						$post_type = get_post_type_object( get_post_type() );
-						$slug      = $post_type->rewrite;
-						printf( $link, $homeLink . '/' . $slug['slug'] . '/', $post_type->labels->singular_name );
-						if( $showCurrent == 1 ) {
-							echo $delimiter . $before . get_the_title() . $after;
-						}
-					}
-					else {
-						$cat  = get_the_category();
-						$cat  = $cat[0];
-						$cats = get_category_parents( $cat, true, $delimiter );
-						if( $showCurrent == 0 ) {
-							$cats = preg_replace( "#^(.+)$delimiter$#", "$1", $cats );
-						}
-						$cats = str_replace( '<a', $linkBefore . '<a' . $linkAttr, $cats );
-						$cats = str_replace( '</a>', '</a>' . $linkAfter, $cats );
-						echo $cats;
-						if( $showCurrent == 1 ) {
-							echo $before . get_the_title() . $after;
-						}
-					}
-
-				}
-				elseif( !is_single() && !is_page() && get_post_type() != 'post' && !is_404() ) {
-					$post_type = get_post_type_object( get_post_type() );
-					echo $before . $post_type->labels->singular_name . $after;
-
-				}
-				elseif( is_attachment() ) {
-					$parent = get_post( $post->post_parent );
-					$cat    = get_the_category( $parent->ID );
-
-					if( isset( $cat[0] ) ) {
-						$cat = $cat[0];
-					}
-
-					if( $cat ) {
-						$cats = get_category_parents( $cat, true, $delimiter );
-						$cats = str_replace( '<a', $linkBefore . '<a' . $linkAttr, $cats );
-						$cats = str_replace( '</a>', '</a>' . $linkAfter, $cats );
-						echo $cats;
-					}
-
-					printf( $link, get_permalink( $parent ), $parent->post_title );
-					if( $showCurrent == 1 ) {
-						echo $delimiter . $before . get_the_title() . $after;
-					}
-
-				}
-				elseif( is_page() && !$post->post_parent ) {
-					if( $showCurrent == 1 ) {
-						echo $before . get_the_title() . $after;
-					}
-
-				}
-				elseif( is_page() && $post->post_parent ) {
-					$parent_id   = $post->post_parent;
-					$breadcrumbs = array();
-					while( $parent_id ) {
-						$page_child    = get_page( $parent_id );
-						$breadcrumbs[] = sprintf( $link, get_permalink( $page_child->ID ), get_the_title( $page_child->ID ) );
-						$parent_id     = $page_child->post_parent;
-					}
-					$breadcrumbs = array_reverse( $breadcrumbs );
-					for( $i = 0; $i < count( $breadcrumbs ); $i++ ) {
-						echo $breadcrumbs[$i];
-						if( $i != count( $breadcrumbs ) - 1 ) {
-							echo $delimiter;
-						}
-					}
-					if( $showCurrent == 1 ) {
-						echo $delimiter . $before . get_the_title() . $after;
-					}
-
-				}
-				elseif( is_tag() ) {
-					echo $before . sprintf( $text['tag'], single_tag_title( '', false ) ) . $after;
-
-				}
-				elseif( is_author() ) {
-					global $author;
-					$userdata = get_userdata( $author );
-					echo $before . sprintf( $text['author'], $userdata->display_name ) . $after;
-
-				}
-				elseif( is_404() ) {
-					echo $before . $text['404'] . $after;
-
-				}
-				if( get_query_var( 'paged' ) ) {
-					if( is_category() || is_day() || is_month() || is_year() || is_search() || is_tag() || is_author() ) {
-						echo ' (';
-					}
-					echo $delimiter . sprintf( __( 'Page %s', 'responsive' ), max( $paged, $page ) );
-					if( is_category() || is_day() || is_month() || is_year() || is_search() || is_tag() || is_author() ) {
-						echo ')';
-					}
-				}
-
-				echo '</div>';
+			if( get_query_var( 'paged' ) || get_query_var( 'page' ) ) {
+				$page_num = get_query_var( 'page' ) ? get_query_var( 'page' ) : get_query_var( 'paged' );
+				$html_output .= $delimiter . sprintf( __( 'Page %s', 'responsive' ), $page_num );
 
 			}
+
+			$html_output .= '</div>';
+
 		}
+
+		echo $html_output;
+
 	} // end responsive_breadcrumb_lists
 
-endif;
+}
 
 /**
  * A safe way of adding stylesheets to a WordPress generated page.
@@ -925,7 +932,7 @@ function responsive_widgets_init() {
 						  'before_widget' => '<div id="%1$s" class="%2$s">',
 						  'after_widget'  => '</div>'
 					  ) );
-					  
+
 	register_sidebar( array(
 						  'name'          => __( 'Footer Widget', 'responsive' ),
 						  'description'   => __( 'Area 12 - sidebar-footer.php - Maximum of 3 widgets per row', 'responsive' ),
